--- a/Sports/NBA Site/templates/layout.html
+++ b/Sports/NBA Site/templates/layout.html
@@ -13,7 +13,20 @@
     <meta name="description" content="Get Scores Fast!!!">
     <meta name="keywords" content= "
     NBA,basketball,statistics,stats,bballfast,bball,fast">
-    <meta name="author" content="cphil124">
+    <meta name="author" content="bballfast">
     <link rel="shortcut icon" href="">
-
 </head>
+
+<nav class="navbar navbar-static-top navbar-inverse bg-inverse">
+    <a class="navbar-brand" href="/">bballfast</a>
+</nav><!-- /.navbar -->
+
+{% block body %}
+{% endblock %}
+
+<!-- Bootstrap core Javascript
+====================================================================-->
+<script src="{{url_for('static', filename='javascripts/jquery-3.1.1.slim.js') }}"></script>
+<script src="{{url_for('static', filename='javascripts/tether.min.js') }}"></script>
+<script src="{{url_for('static', filename='javascripts/bootstrap.min.js') }}"></script>
+
