--- a/Sports/NBA Site/templates/layout.html
+++ b/Sports/NBA Site/templates/layout.html
@@ -3,10 +3,10 @@
     <title>bballfast - {{ title }}</title>
 
     <!-- Bootstrap CSS -->
-    <link href="{{ url_for('static', filename='stylesheets\bootstrap.min.css') }}" rel='stylesheet' type='text/css'/>
+    <link href="{{ url_for('static', filename='stylesheets/bootstrap.min.css') }}" rel='stylesheet' type='text/css'/>
     
     <!-- Custom CSS -->
-    <link href="{{ url_for('static', filename='stylesheets\[[other css]]') }}" rel='stylesheet' type='text/css' />
+    <!-- <link href="{{ url_for('static', filename='stylesheets\[[other css]]') }}" rel='stylesheet' type='text/css' /> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -16,17 +16,17 @@
     <meta name="author" content="bballfast">
     <link rel="shortcut icon" href="">
 </head>
-
-<nav class="navbar navbar-static-top navbar-inverse bg-inverse">
-    <a class="navbar-brand" href="/">bballfast</a>
-</nav><!-- /.navbar -->
-
+<body>
+    <nav class="navbar navbar-static-top navbar-inverse bg-inverse">
+        <a class="navbar-brand" href="/">bballfast</a>
+    </nav><!-- /.navbar -->
+</body>
 {% block body %}
 {% endblock %}
 
 <!-- Bootstrap core Javascript
 ====================================================================-->
-<script src="{{url_for('static', filename='javascripts/jquery-3.1.1.slim.js') }}"></script>
-<script src="{{url_for('static', filename='javascripts/tether.min.js') }}"></script>
-<script src="{{url_for('static', filename='javascripts/bootstrap.min.js') }}"></script>
+<script src="{{url_for('static', filename='javascript/jquery-3.1.1.slim.js') }}"></script>
+<script src="{{url_for('static', filename='javascript/tether.min.js') }}"></script>
+<script src="{{url_for('static', filename='javascript/bootstrap.min.js') }}"></script>
 
